--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -16,8 +16,8 @@
     <%= form.text_field :account_number, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= form.label :supplier_id %>
-    <%= form.select :supplier_id, options_from_collection_for_select(Account.all, "supplier_id", "account_number")%>
+    <%= form.label :name %>
+    <%= form.select :name, options_from_collection_for_select(Supplier.all, "id", "name")%>
   </div>
   <%=form.submit "submit", class: "btn btn-primary"%>
 <% end %>
