--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -5,7 +5,7 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th>Supplier ID</th>
+        <th>Supplier name</th>
         <th>Account Number</th>
 
         <th colspan="3">Actions</th>
@@ -14,7 +14,7 @@
     <tbody>
       <% @accounts.each do |account| %>
       <tr>
-        <td><%= account.id %></td>
+        <td><%= account.supplier_name %></td>
         <td><%= account.account_number %></td>
 
         <td><%= link_to "Show",  account_path(account.id) %></td>
