--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>UserSignUp</title>
-    <%= csp_meta_tag %>
+    <%= csrf_meta_tag %>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
